Clean anim. code, bg anim. correctly hides sprites
`GraphicsLayer` component rendering separates all animation cases:
 - no animation
 - background animation, that hides old sprites with new bg
 - other sprites animation

Prepare code for proper cross-fade between sprites :
 - currently crossfade animation of sprites makes the background
   slightly visible due to overlaping opacity.
 - using the css `mask-image` property could be used to create an opaque
   background for the transition.
 - added the `to-sprite` node attribute to prepare for this.

Clean css

--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -29,18 +29,6 @@ body {
     font-size: 1.1em;
     font-family: Ubuntu, sans-serif;
 
-    .background {
-        position: absolute;
-        inset: 0;
-        z-index: 0;
-        display: block;
-        width: inherit;
-        height: inherit;
-        object-fit: cover;
-        object-position: center;
-        transition: object-position var(--transition-time) ease-out;
-    }
-
     .box {
         width: inherit;
         height: inherit;
@@ -57,7 +45,6 @@ body {
             height: inherit;
             object-fit: cover;
             &.l, &.c, &.r {
-                z-index: 1;
                 bottom: 0;
                 height: 100%;
                 display: flex;
@@ -71,7 +58,6 @@ body {
             &.bg {
                 position: absolute;
                 inset: 0;
-                z-index: 0;
                 display: block;
                 width: inherit;
                 transition: object-position var(--transition-time) ease-out;
@@ -81,35 +67,6 @@ body {
                 &[bg-align="bottom"] { object-position: bottom; }
             }
 
-        }
-    }
-    .box-characters {
-        z-index: 1;
-        overflow: hidden;
-
-        .img-container {
-            position: absolute;
-            bottom: 0;
-            overflow: hidden;
-            height: 100%;
-            left: 0;
-            right: 0;
-            display: flex;
-
-            &.c {
-                justify-content: center;
-            }
-            &.l {
-                justify-content: flex-start;
-            }
-            &.r {
-                justify-content: flex-end;
-            }
-
-            img {
-                height: inherit;
-                object-fit: cover;
-            }
         }
     }
     .box-text {
